<resources>
    <string name="app_name">Fake Call</string>
    <string name="image">Image</string>
    <string name="select_file">Select File</string>
    <string name="name">Name:</string>
    <string name="phone">Phone</string>
    <string name="done">OK</string>
    <string name="add_voice">Add Voice</string>
    <string name="set_time">Set Time</string>
    <string name="demo">Demo</string>
    <string name="choose_hour">Choose hour:</string>
    <string name="toast_fakecall">Fake call will run at  </string>
    <string name="todo">TODO</string>
    <string name="anonymous">Anonymous</string>
    <string name="no_phone">+00000</string>
    <string name="minute_call"> minute</string>
    <string name="hour_call"> Hour </string>
    <string name="cancel">Cancel</string>
    <string name="select_voice">Select Voice</string>
    <string name="toast_done">Done</string>
    <string name="repeat_after">Repeat after:</string>
    <string name="_0">0</string>
    <string name="repeat">Repeat</string>
    <string name="times">times</string>
    <string name="_1">1</string>
    <string name="rate_us">Rate us</string>
    <string name="rate_it">If you like it, rate it</string>
    <string name="ok">Ok</string>
</resources>
