<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver"
    android:layout_centerHorizontal="true"
    tools:context=".MainActivity">

    <de.hdodenhof.circleimageview.CircleImageView
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/img_avt"
        android:layout_width="181dp"
        android:layout_height="139dp"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        android:src="@drawable/avt_default"
        app:civ_border_color="@color/blue"
        app:civ_border_width="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bt_selectImage"
        style="@style/Button"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:text="@string/select_file"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/img_avt"
        app:layout_constraintTop_toTopOf="parent" />
    <EditText
        android:id="@+id/auto_txt"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="40dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:textSize="8pt"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.111"
        app:layout_constraintStart_toEndOf="@+id/txt_name"
        app:layout_constraintTop_toBottomOf="@+id/img_avt"
        android:imeOptions="actionNext"
        android:nextFocusRight="@id/edit_phone"
        tools:ignore="LabelFor,MissingConstraints" />

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:text="@string/name"
        android:textAlignment="center"
        android:textSize="10pt"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avt" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="42dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/phone"
        android:textAlignment="center"
        android:textSize="10pt"
        android:textStyle="bold|italic"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_name" />

    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="259dp"
        android:layout_height="40dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="phone"
        android:textSize="8pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/auto_txt"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/bt_setTime"
        style="@style/Button"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="28dp"
        android:text="@string/set_time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.093"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

    <Button
        android:id="@+id/bt_addVoice"
        style="@style/Button"
        android:layout_width="119dp"
        android:layout_height="44dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="28dp"
        android:text="@string/add_voice"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/bt_setTime"
        app:layout_constraintTop_toBottomOf="@+id/edit_phone" />

    <Button
        android:id="@+id/bt_Ok"
        style="@style/Button"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/done"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.032"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_setTime"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/bt_demo"
        style="@style/Button"
        android:layout_width="155dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/demo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.741"
        app:layout_constraintStart_toEndOf="@+id/bt_Ok"
        app:layout_constraintTop_toBottomOf="@+id/bt_setTime"
        app:layout_constraintVertical_bias="0.68" />

    <Button
        android:id="@+id/bt_cancel"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        style="@style/Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_selectImage"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="119dp"
        android:layout_height="33dp"
        android:layout_marginBottom="72dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="4dp"
        android:text="@string/repeat_after"
        android:textAlignment="center"
        android:textSize="10pt"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_Ok"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bt_setTime"
        app:layout_constraintVertical_bias="0.3" />

    <EditText
        android:id="@+id/ed_replycall"
        android:layout_width="41dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:ems="60"
        android:enabled="false"
        android:inputType="numberDecimal"
        android:text="@string/_0"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/bt_demo"
        app:layout_constraintStart_toEndOf="@+id/switch_repeat"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.060000002"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="70dp"
        android:layout_height="33dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="72dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minute_call"
        android:textAlignment="center"
        android:textSize="10pt"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_demo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ed_replycall"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.23000002" />

    <Switch
        android:id="@+id/switch_repeat"
        android:layout_width="43dp"
        android:layout_height="37dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:textSize="10pt"
        android:textStyle="italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_demo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.178"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.24000001" />

    <EditText
        android:id="@+id/ed_times"
        android:layout_width="41dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:enabled="false"
        android:inputType="number"
        android:text="@string/_1"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/bt_demo"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.06999999" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="56dp"
        android:layout_height="36dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/times"
        android:textAlignment="center"
        android:textSize="10pt"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toTopOf="@+id/bt_demo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/ed_times"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.19999999" />

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="66dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        ads:adSize="SMART_BANNER"
        ads:adUnitId="ca-app-pub-6212624214413563/6734310144"
        ads:layout_constraintBottom_toBottomOf="parent"
        ads:layout_constraintEnd_toEndOf="parent"
        ads:layout_constraintStart_toStartOf="parent"
        ads:layout_constraintTop_toBottomOf="@+id/bt_Ok" />

</android.support.constraint.ConstraintLayout>