<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/rsz_1fakecall_backgroud_call"
    tools:context=".CallActivity">

    <Button
        android:id="@+id/bt_deny"
        android:layout_width="82dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/fakecall_deny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_numbercall"
        app:layout_constraintVertical_bias="0.912" />

    <Button
        android:id="@+id/bt_answer"
        android:layout_width="82dp"
        android:layout_height="85dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/fakecall_answer"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.683"
        app:layout_constraintStart_toEndOf="@+id/bt_deny"
        app:layout_constraintTop_toBottomOf="@+id/txt_numbercall"
        app:layout_constraintVertical_bias="0.912" />

    <ImageView
        android:id="@+id/img_call"
        android:layout_width="376dp"
        android:layout_height="268dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/todo"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_numbercall"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txt_namecall"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:text="@string/anonymous"
        android:textAlignment="center"
        android:textColor="@color/white_2"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.048" />

    <TextView
        android:id="@+id/txt_numbercall"
        android:layout_width="200dp"
        android:layout_height="30dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/no_phone"
        android:textAlignment="center"
        android:textColor="@color/white_2"
        android:textSize="10pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_namecall" />
</android.support.constraint.ConstraintLayout>